# stonkz

./: .gitignore  CONFIGURATION_ALIGNMENT.md  LINUX_SETUP_README.md  SETUP_GUIDE.md  SETUP_README.md  activate.bat  activate.ps1  activate.sh  activate_uv.sh  analyze_dataset.py  backtest_unified.py  check_model_dims.py  check_official_timesfm.py  chronos_loop.py  cleanup_space.sh  config.py  config_example.yaml  demo_predictions.py  fft_database_builder.py  fft_frequency_analysis.py  fft_improve_similarity.py  fft_pattern_matcher.py  fft_project_plan.md  fft_signature_loader.py  fft_similarity_engine.py  fft_visualizer.py  finetune_timesfm2.py  finetuned_inference.py  finetuning.env  flamingo_loop.py  frequency_analysis.py  good_timefm_stock_working.py  kronos_backtest.py  kronos_loop.py  kronos_single_test.py  openai_training_data_generator.py  plotting.py  prediction_chronos.py  prediction_fft.py  prediction_fft_directional_bias.py  (+32 more)
backtest_results/: backtest_sundial_20250829_212834.json  backtest_sundial_20250829_212923.json  backtest_sundial_20250829_213921.json  backtest_sundial_20250829_214040.json  backtest_timesfm_v2_20250829_215350.json  backtest_timesfm_v2_20250829_215941.json  backtest_timesfm_v2_20250829_222143.json
old/: SETUP_GUIDE.md  TIMESFM_COMPLETE_GUIDE.md  analyze_checkpoint.py  analyze_sequences.py  clear_cache.py  count_sequences.py  debug_data_preprocessing.py  debug_predictions.py  diagnose_scale_issues.py  flamingo_stock_demo.py  good_test_timesfm_official_fixed.py  kronos_backtest.py  kronos_custom.py  monitor_training.py  quick_setup.sh  (+5 more)
(+17 files in other folders)
